# calc

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  add.c  add.h  arctg.c  arctg.h  calc  cos.h  div.c  div.h  factorial.c  factorial.h  main.c  mod.c  mod.h  modul2.c  modul2.h  multiplication.c  multiplication.h  sin.c  sin.h  sub_func.c  sub_func.h  tan.c  tan.h
src/.deps/: add.Po  arctg.Po  div.Po  main.Po  mod.Po  modul2.Po  multiplication.Po  sin.Po  sub_func.Po  tan.Po
